# ObjectDetection

./: .gitignore  README.md  exp.txt  knn_metrics.csv  pyproject.toml
notebooks/: cifar10.ipynb  cifar100.ipynb  data_visualization.ipynb  evaluate.ipynb  food101.ipynb  knn.ipynb  linear_classifier.ipynb  main.ipynb  main.py  monitoring.ipynb  train.ipynb
src/: callbacks.py  dataset.py  knn.py  linear_classifier.py  logger.py  models.py  module.py  settings.py  temp.py  trainer.py  utils.py
